--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         "cakephp/migrations": "^2.0.0",
         "cakephp/plugin-installer": "^1.0",
         "fzaninotto/faker": "^1.9",
-        "mobiledetect/mobiledetectlib": "2.*"
+        "holt59/cakephp3-bootstrap-helpers": "dev-master",
+        "mobiledetect/mobiledetectlib": "2.*",
+        "twbs/bootstrap": "4.5.3"
     },
     "require-dev": {
         "cakephp/bake": "^1.9.0",
